# cargo-bump

./: Cargo.toml
src/: main.rs  version.rs
