[package]
authors = ["Wraithan (Chris McDonald) <xwraithanx@gmail.com>"]
description = "Increments the version number of the current project."
keywords = ["cargo", "version"]
license = "ISC"
name = "cargo-bump"
readme = "README.md"
repository = "https://github.com/wraithan/cargo-bump"
version = "1.0.1"
edition = "2018"

[badges]
travis-ci = {repository = "wraithan/cargo-bump", branch = "master" }

[dependencies]
clap = "2.32.0"
semver = "0.9.0"
toml_edit = "0.1.3"
